------------------------------------------------------------------------
r9 | root | 2004-11-14 13:00:36 +0000 (Sun, 14 Nov 2004) | 1 line

Version Number corrected to match IO::Toolkit rather than IOToolkit
------------------------------------------------------------------------
r8 | root | 2004-11-14 12:59:02 +0000 (Sun, 14 Nov 2004) | 1 line

Preparation for CPAN release
------------------------------------------------------------------------
r1 | root | 2004-11-14 12:37:07 +0000 (Sun, 14 Nov 2004) | 1 line

Initial
------------------------------------------------------------------------