@@ -9,13 +9,47 @@ PREREQUISITS
     Digest::MD5 and DirHandle used for checksum routines.
 
 SYNOPSIS
-    Sample Script:
+    Sample Script (please also have a look into the samples directory):
 
-       ... soon ...
+       use IO::Toolkit;
+       use File::Basename;
+
+       package main;
+       use vars qw($getopt_loglevel $program $programname);
+
+       my $program = basename($0);    
+       $programname = $program;
+       $programname =~ s/\.pl//g;
+
+       my $logfilename = $programname . ".log";
+       my $VERSION = sprintf "%d.%05d", '$Revision:   1.4  $' =~ /(\d+)/g;
+       my $description = "Script";
+
+       my $extra;
+       my @extra_options = (
+                            { 
+                                    Spec            =>  "extra=s",
+                                    Variable        => \$extra,
+                                    Help            => "--extra=whatever",
+                                    Verbose         => ["--extra=whatever",
+                                                        "whatever whenever...",
+                                                       ] 
+                            },
+                        );
+                
+       IO::Toolkit::commandline(@extra_options);
+
+       logme("open", $logfilename);
+       logme("M","$programname V$VERSION started --------------------------------------------------");
+       logme("C", "Logfile $logfilename used.");
+       logme("M","$programname V$VERSION ended   --------------------------------------------------");
+       logme("close");
    
     This displays and creates a logfile like this:
 
-       ... soon ...
+       2004-11-14 13:07:48 [mytemplate] <M> mytemplate V1.00004 started --------------------------------------------------
+       2004-11-14 13:07:48 [mytemplate] <C> Logfile mytemplate.log used.
+       2004-11-14 13:07:48 [mytemplate] <M> mytemplate V1.00004 ended   --------------------------------------------------
 
 DESCRIPTION
     Provides a human-readable logfile and is ment to replace "print" and
